--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
           
           <div class="feature-item">
             <img class="feature-item__icon" src="assets/images/icons/globe.svg">
-            <h3 class="feature-item__title">Global Guides</h3>
+            <h3 class="feature-item__title">Global Guides!!!!</h3>
             <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of the world you want to escape to we know the most scenic and inspiring locations.</p>
           </div>
 
